--- a/Q6/Q6.md
+++ b/Q6/Q6.md
@@ -1,5 +1,5 @@
-## Part  
-Solution to part a is in the file emotions.py. Simply run the file and it will analyze both videos using the FER library and output 2 plots that show the predicted emotions.
+## Part A
+Solution to part A is in the file emotions.py. Simply run the file and it will analyze both videos using the FER library and output 2 plots that show the predicted emotions.
 I have taken a screenshot of both plots for video one and 2, they can be found in the sub directory plots. The plots are titled partAVideo1.png and partAVideo2.png.
 
 ## Part B
