--- a/Q6/Q6.md
+++ b/Q6/Q6.md
@@ -1,10 +1,10 @@
 ## Part A
 Solution to part A is in the file emotions.py. Simply run the file and it will analyze both videos using the FER library and output 2 plots that show the predicted emotions.
-I have taken a screenshot of both plots for video one and 2, they can be found in the sub directory plots. The plots are titled partAVideo1.png and partAVideo2.png.
+I have taken a screenshot of both plots for video one and 2, they can be found in the sub directory plots. ![partAVideo1.png](./plots/partAVideo1.png) ![partAVideo2.png](./plots/partAVideo2.png).
 
 ## Part B
  Solution to part B is in the file liveEmotions.py. When you run the program it will ask you if you want to analyze my prerecorded video or the webcam feed. If you choose webcam you must type q on the webcam output window to stop analysis and see the result plot. This program also uses the FER library to predict the emotions. If you don't want to run
- it I have included a picture of the plot generated from my personal prerecorded video in the plots directory, it is titled partBVideo.png.
+ it I have included a picture of the plot generated from my personal prerecorded video in the plots directory, it is titled ![partBVideo.png](./plots/partBVideo.png).
 
 The performance difference between the raspberry pi and my laptop when analyzing the same video "emotionRecording.mp4" (454 frames) were as follows:
 
@@ -26,4 +26,4 @@ The solution to part C. is found in the file nlp.py, when running the program it
 ## Part D
 2 potential applications of a software stack that uses both emotion detection based on facial expressions and NLP based emotion detection are: 
 
- A customer service bot of some kind that can use a llm to provide responses to the client while taking into account their predicted emotions. You could also use this stack in market research applications. You could gauge peoples' reactions to a product or service and use that data by itself or in combination with other collected data to predict market viability of your product. This software stack, no matter the application, is useful as it allows further insight based not only on the words of the user, but the emotional context of those words which will lead to more accurate and appropriate responses/data. The associated diagrams for this part of the problem are found in Q6/diagrams, the diagrams are based on the customer service application of this software stack.
+ A customer service bot of some kind that can use a llm to provide responses to the client while taking into account their predicted emotions. You could also use this stack in market research applications. You could gauge peoples' reactions to a product or service and use that data by itself or in combination with other collected data to predict market viability of your product. This software stack, no matter the application, is useful as it allows further insight based not only on the words of the user, but the emotional context of those words which will lead to more accurate and appropriate responses/data. The associated diagrams for this part of the problem are found in Q6/diagrams, the diagrams are based on the customer service application of this software stack. ![Flowchart](./diagrams/EmotionFlowchart.png) ![Stack](./diagrams/EmotionStackDiagram.png)
