--- a/Q6/Q6.md
+++ b/Q6/Q6.md
@@ -4,7 +4,7 @@ I have taken a screenshot of both plots for video one and 2, they can be found i
 
 ## Part B
  Solution to part B is in the file liveEmotions.py. When you run the program it will ask you if you want to analyze my prerecorded video or the webcam feed. If you choose webcam you must type q on the webcam output window to stop analysis and see the result plot. This program also uses the FER library to predict the emotions. If you don't want to run
- it I have included a picture of the plot generated from my personal prerecorded video in the plots directory, it is titled ![partBVideo.png](./plots/partBVideo.png).
+ it I have included a picture of the plot generated from my personal prerecorded video in the plots directory ![partBVideo.png](./plots/partBVideo.png).
 
 The performance difference between the raspberry pi and my laptop when analyzing the same video "emotionRecording.mp4" (454 frames) were as follows:
 
