--- a/Q8/Q8.md
+++ b/Q8/Q8.md
@@ -2,7 +2,7 @@
 
 ## Part A
 
-For this section I deployed the Faster R-CNN model. It can be found in the directory FasterRCNN, to run the classification create new virtual environment `python3 -m venv .venv` and install everything in the `./FasterRCNN/tf2/requirements.txt` file.
+I deployed the Faster R-CNN model to classify the 100 images. The model implementation can be found in the directory FasterRCNN, to run the classification create new virtual environment `python3 -m venv .venv` and install everything in the `./FasterRCNN/tf2/requirements.txt` file.
 
 Then run the following command from within the FasterRCNN:
 
@@ -10,7 +10,7 @@ Then run the following command from within the FasterRCNN:
 python -m tf2.FasterRCNN --load-from=./fasterrcnn_tf2.h5 --predict-all-directory=./grocerystore
 ```
 
-The results will be saved in the `FasterRCNN/detections` directory. I have already pushed all the output to the repo so you can see the results there without running the code.
+The classified images are in the `FasterRCNN/detections` directory. I have already pushed all the output to the repo so you can see the results there without running the code.
 
 ## Part B
 
