--- a/Q7/Q7.md
+++ b/Q7/Q7.md
@@ -10,7 +10,7 @@ Comparison of the various algorithms over 10 iterations (no animation).
 | Bidirectional | 0.39 | 122.37 |
 | RRT Star | 4.83 | 25.86 |
 
-Cleary, the RRT Start takes by far the longest, however it has the shortest path between each point. The other algorithms are all very similar in time and in length, but CusomtBidirectional is slightly slower and has a slightly longer path. Our custom VanillaAStar did better because we weighted the movement forward so heavily, as shown in our heuristic
+Cleary, the RRT Star takes by far the longest, however it has the shortest path between each point. The other algorithms are all very similar in time and in length, but CustomBidirectional is slightly slower and has a slightly longer path. Our custom VanillaAStar did better because we weighted the movement forward so heavily, as shown in our heuristic
 
 ```python
 def calc_heuristic(self, n1, n2):
@@ -45,10 +45,13 @@ def analyzeCost(rx, ry):
 
 ### Follow Up Questions
 
-A. The RRT Star algorithm is the most efficient in terms of path cost, but it is the slowest in terms of time.
-B. The fastest algorithm was the Bidirectional planner, with a second place win for Dijkstra.
-C. Our custom A\* does not fully take advantage of heuristics to speed up the search. It would be helpful to favor the algorithm to go towards where there is open space. RRT clearly shows that moving along the path in a minimal number of turns is the most efficient way to get to the goal. More aggressive convergence reduces the time and path cost.
-D. The best overall planner would be either A star or RRT Star. A star works so much faster, but requires a lot more back tracking and searching. RRT Star is slower, but it is more efficient in terms of path cost. In practice, it seems like RRT would end up being faster because it would be difficult to do so many small maneuvers on the robot for an A star or Dijkstra path.
+A) The RRT Star algorithm is the most efficient in terms of path cost, but it is the slowest in terms of time.
+
+B) The fastest algorithm was the Bidirectional planner, with a second place win for Dijkstra.
+
+C) Our custom A\* does not fully take advantage of heuristics to speed up the search. It would be helpful to favor the algorithm to go towards where there is open space. RRT clearly shows that moving along the path in a minimal number of turns is the most efficient way to get to the goal. More aggressive convergence reduces the time and path cost.
+
+D) The best overall planner would be either A star or RRT Star. A star works so much faster, but requires a lot more back tracking and searching. RRT Star is slower, but it is more efficient in terms of path cost. In practice, it seems like RRT would end up being faster because it would be difficult to do so many small maneuvers on the robot for an A star or Dijkstra path.
 
 Graphs:
 
@@ -78,7 +81,11 @@ Graphs:
 
 ## Part B
 
-In identifying an algorithm we must recognize a few things: 1) That there are still obstacles that cannot be crossed regardless of elevation. 2) That the cost to move up and down is not equal. If we can move down it is cheaper than moving left or right. 3) That we can only move up or down one unit at a time. This makes something like RRT Star more challenging because it works better on longer paths.
+In identifying an algorithm we must recognize a few things:
+
+1. That there are still obstacles that cannot be crossed regardless of elevation.
+2. That the cost to move up and down is not equal. If we can move down it is cheaper than moving left or right.
+3. That we can only move up or down one unit at a time. This makes something like RRT Star more challenging because it works better on longer paths.
 
 In addition, we want the cheapest path, not the necessarily the shortest. If we optimize for cost rather than distance something like Dijkstra or A\* may be better, because they check the neighbors much more frequently than RRT Star.
 
@@ -110,7 +117,11 @@ If the cost to traverse is 2, then the optimal path is shown below:
 
 Different elevations would change the speed proportional to gravity. If we are on an earth-like planet then gravity will speed up the robot as it goes down and slow down the robot as it goes up. In a close to zero gravity environment, the robot would still be affected, but almost unnoticeably.
 
-A general overview of the A star algorithm:
+Another assumption we make is that moving diagonally is the same cost as moving veritclally or horizontally. In the real world this is not true, as the [hypotenuse](https://www.youtube.com/watch?v=dQw4w9WgXcQ) is longer than the two sides.
+
+As noted above, given the amiguity of the question description, we have assumed that the cost of moving from 1 to 2 is the same as moving from 1 to 3 (regular moving cost + 1, where 1 is the cost for elevation up).
+
+### A general overview of the A star algorithm
 
 It takes in a start position and looks at the available neighbors. From those neighbors we take a relative cost (which takes into account the elevation), and then we add that cost to the distance towards the goal. We then put that onto a priority queue where the best combination of closeness and lowest cost appears. We then repeat that process and throw the values onto the queue.
 
@@ -131,4 +142,6 @@ And
 
 where `g_score` is the elevation cost.
 
-The more elevation change affects how we charge the move. These values can be adjusted in the calculate_move_cost function (ex: from cost of 1 to cost of 2 for moving). Using this customization we could find a great path in almost every environment.
+As noted above, for this model, we assumed that the elevation change from 1 to 2 is the same cost as from 1 to 3.
+
+Moving from squares at the same elevation are adjusted in the calculate_move_cost function (ex: from cost of 1 to cost of 2 for moving). Using this customization we could find a great path in almost every environment.
