--- a/Q7/Q7.md
+++ b/Q7/Q7.md
@@ -119,7 +119,7 @@ Different elevations would change the speed proportional to gravity. If we are o
 
 Another assumption we make is that moving diagonally is the same cost as moving veritclally or horizontally. In the real world this is not true, as the [hypotenuse](https://www.youtube.com/watch?v=dQw4w9WgXcQ) is longer than the two sides.
 
-As noted above, given the amiguity of the question description, we have assumed that the cost of moving from 1 to 2 is the same as moving from 1 to 3 (regular moving cost + 1, where 1 is the cost for elevation up).
+As noted above, given the ambiguity of the question description, we have assumed that the cost of moving from 1 to 2 is the same as moving from 1 to 3 (regular moving cost + 1, where 1 is the cost for elevation up).
 
 ### A general overview of the A star algorithm
 
