--- a/Q8/Q8.md
+++ b/Q8/Q8.md
@@ -2,7 +2,7 @@
 
 ## Part A
 
-I deployed the Faster R-CNN model to classify the 100 images. The model implementation can be found in the directory FasterRCNN, to run the classification create new virtual environment `python3 -m venv .venv` and install everything in the `./FasterRCNN/tf2/requirements.txt` file.
+I deployed the Faster R-CNN model to classify the 100 images. The model implementation can be found in the directory FasterRCNN, to run the classification create new virtual environment `python3 -m venv .venv` within the FasterRCNN directory and install everything in the `./FasterRCNN/tf2/requirements.txt` file.
 
 Then run the following command from within the FasterRCNN:
 
@@ -14,7 +14,7 @@ The classified images are in the `FasterRCNN/detections` directory. I have alrea
 
 ## Part B
 
-I have deployed both versions of yolo, they can be found in the directories `yolov5` and `yolov8`. For the yolo version I implemented both
+I have deployed both versions of yolo, they can be found in the directories `yolov5` and `yolov8`. For the yolo versions I implemented both
 
 1. image classification
 2. object detection.
@@ -23,16 +23,21 @@ There are separate files to run and output directories for each of these functio
 
 ### YoloV5
 
-For yolov5 you must create a new virtual environment and install the requirements in the `./yolov5/requirements.txt` file. Then run the following command from the yolov5 directory: `python detect.py` for detection or `python classify/predict.py`.
+For yolov5 you must create a new virtual environment within the yolov5 directory and install the requirements in the `./yolov5/requirements.txt` file. Then run the following command from the yolov5 directory: `python detect.py` for detection or `python classify/predict.py`.
 
 
-The results will be stored in `yolov5/runs/detect/detections` and `yolov5/runs/predict-cls/classifications` respectively.
+The results are stored in `yolov5/runs/detect/detections` and `yolov5/runs/predict-cls/classifications` respectively.
 
 ### YoloV8
 
-For yolov8 you must first again create a virtual environment, and this time install the requirements in the `./yolov8/requirements.txt` file. Then run the following command: `python detect.py` for detection or `python classify.py` for classification.
+For yolov8 you must first again create a virtual environment within the yolov8 directory, and this time install the requirements in the `./yolov8/requirements.txt` file. Then run the following command: `python detect.py` for detection or `python classify.py` for classification.
 
-The results will be stored in `yolov8/ultralytics/detections` and `yolov8/ultralytics/classifications` respectively. Again I have already run the programs and the results are in the repo for you to view.
+The results are stored in `yolov8/ultralytics/detections` and `yolov8/ultralytics/classifications` respectively. Again I have already run the programs and the results are in the repo for you to view.
+
+#### Discuss accuracy and Speed
+
+To compare the accuracy between yolov5 and yolov8 I looked through various performance benchmark comparisons. There appears to be unanimous agreement the yolov8 is both very fast and more accurate than any other yolo version. For accuracy [this](https://medium.com/@rustemgal/yolov8-efficientdet-faster-r-cnn-or-yolov5-for-remote-sensing-12487c40ef68) article does a very good job of detailing the performance of yolov5, v8, and fasterRCNN. As far as speed goes I found [this](https://www.stereolabs.com/blog/performance-of-yolo-v5-v7-and-v8/#:~:text=However%2C%20based%20on%20our%20testing,Orin%20and%20RTX%204070%20Ti.) study that determined v5 was slightly faster in terms of frames per second than v8, but the marginal difference was not worth the loss in accuracy and the determination was still reached that yolov8 was the best yolo version. In my use of both versions I found yolov8 to be more accurate by visually comparing the outputs, but with the limited size of the test dataset and the lower performance of my laptop, I feel more confident in referring to studies that deployed both models in more rigorous testing. I will note in my testing I found yolov8 to be faster and easier to deploy, and used those considerations when determining which version to deploy on the raspberry pi.
+
 
 ## Part C
 
